HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OpaqueUndefinedClassType/Source/Main.uv
//! Rejected polymorphism specimen for an opaque type with an undefined class.

internal procedure acceptMissingOpaque(value: opaque MissingOpaqueClass) -> i32 {
    return 1
}
